- Fix width of the vertical toolbars (Artur Wieczorek).
- Fix handling of controls in the vertical toolbars (Artur Wieczorek).
- Fix loading of top to bottom BMP files in wxBitmap (Artur Wieczorek).
- Fix resource leak in wxStaticBitmap with RGBA icons (Artur Wieczorek).
- Fix toolbar repainting after deleting a tool from it (Artur Wieczorek).
- Fix handling of deleting directories in wxFileSystemWatcher (Eric Raijmakers).
- Disable the use of new style wxDirDialog under Vista to work around a bug in
  its implementation under this system (jtrauntvein).
- Fix wxExecute() keeping open too many thread handles for too long (dannchr).
- Fix clicking on togglable columns in wxDataViewCtrl (Laurent Poujoulat).
- Fix expander in non left-most position in wxDataViewCtrl (Laurent Poujoulat).
- Don't fail when using large paper sizes in print preview.
- Fix wxRichMessageDialog return value for dialog with only "OK" button.

wxOSX:

- Fix buffer overrun in drag-and-drop code (Kristian Duske).
- Fix incorrect joystick detection in configure (Lauri Nurmi).
- Fix crash in wxDataViewCtrl when cancelling choice selection (hartwigw).
- Implement support for wxGA_VERTICAL in wxGauge (themindiswatching).
- Add support for wxEVT_COMBOBOX_DROPDOWN and wxEVT_COMBOBOX_CLOSEUP
  events to wxOSX/Cocoa (Igor Korot).


3.0.0: (released 2013-11-11)
----------------------------

All:

- Fix crash if wxCharBuffer fails to allocate the requested amount of memory.

wxGTK:

- Fix wxSpinButton default width under GTK+ 3 (David Hart).

wxMSW:

- Compilation fix for WXWIN_COMPATIBILITY_2_6=1 case (Tim Stahlhut).
- Fix behaviour of wxComboBox using ID=1000.


3.0-RC2: (released 2013-10-28)
------------------------------

All:

- wxTextFile::SaveFile() uses UTF-8 now.
- Add possibility to validate the input files against a schema to wxrc.
- Fix recently broken compilation with Intel compiler.
- Fix reading of files with Mac EOLs in wxTextFile.

All (GUI):

- Fix wxListEvent::GetData() in LLP64 builds.